--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "myclass",
+  "name": "my-class",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm-run-all -p browsersync nodemon",
-    "nodemon": "nodemon server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views' "
+    "start": "npm-run-all -p nodemon browsersync ",
+    "browsersync": "browser-sync start --proxy http://localhost:3335 --files 'public, src' ",
+    "nodemon": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Marcelo Galdino",
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "express": "^4.17.1",
     "intl": "^1.2.5",
@@ -19,8 +23,17 @@
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
     "browser-sync": "^2.26.7",
-    "nodemon": "^2.0.2",
+    "cz-conventional-changelog": "^3.2.0",
+    "husky": "^4.2.5",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
