refactor: implemented students CRUD using a database and refactor the controllers
implemented students CRUD using a database and refactor the controllers

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "intl": "^1.2.5",
     "method-override": "^3.0.0",
